--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,8 @@ html{
   background-color: black;
 }
 body{
-  width:50vw;
-  height: 80vh;
+  width:80vw;
+  height: 800px;
   background-color: aqua;
   margin: 0 auto;
 }
